# gator-core

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini  vendorize.toml
.github/workflows/: publish.yml  pytest.yml
src/gator/core/data/: dataset.py  record.py  repo.py  storage.py
src/gator/core/data/providers/: repos.py
src/gator/core/data/providers/uoft/: utsg.py
src/gator/core/data/storage/: __init__.py  base.py  disk.py  fs.py  mem.py
src/gator/core/data/utils/: __init__.py  io.py  serialization.py
src/gator/core/models/: __init__.py  base_types.py  common.py  institution.py  mongoengine.py  mongoengine_typing.py  timetable.py
src/gator/core/schemas/: __init__.py  common.py  institution.py  timetable.py
tests/: __init__.py
tests/data/storage/: base_test.py  test_disk.py  test_mem.py
tests/data/utils/: test_hash.py  test_io.py  test_serialization.py
tests/models/: test_institution.py  test_timetable.py
tests/schemas/: test_institution.py  test_timetable.py
