[tool.poetry]
name = "gator-core"
version = "0.0.0"  # placeholder for the real version, which is retrieved from git tags
description = "A dataset aggregation framework for Sqrl Planner."
authors = ["Shon Verch <verchshon@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "gator/**/*", from = "src" }
]
include = [
    "src/gator/_vendor/**/*",
    { path = "tests", format = "sdist" }
]
exclude = [
    "**/*.pyc",
    "**/*.pyi",
]

[tool.poetry.dependencies]
python = "^3.9"
mongoengine = ">=0.20"
marshmallow = "^3.17.0"
requests = "^2.28.2"
bs4 = "^0.0.1"
routes = "^2.5.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-httpserver = "^1.0.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
mongo-types = "^0.15.1"
vendorize = "^0.3.0"
mongomock = "^4.1.2"
sybil = "^5.0.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["gator/**", "tests/**"]
exclude = ["**/__pycache__", "src/gator/_vendor/**"]

typeCheckingMode = "basic"
pythonVersion = "3.9"
pythonPlatform = "All"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download required modules
reportMissingImports = "none"
